# sphinx-basic-ng-template

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  setup.cfg  web-compile-config.yml
basic_ng_template/: __init__.py
basic_ng_template/theme/basic_ng_template/: hashes.csv  theme.conf
basic_ng_template/theme/basic_ng_template/components/: mycustomcomponent.html
basic_ng_template/theme/basic_ng_template/components/topbar/: download.html  fullscreen.html  launchbuttons.html  repobuttons.html  tableofcontents.html
basic_ng_template/theme/basic_ng_template/sections/: footer-article.html  footer-content.html  footer.html  header-article.html
basic_ng_template/theme/basic_ng_template/static/: basic-ng-template.css  basic-ng-template.js  basic-ng-template.scss.map.json
docs/: conf.py  index.md
src/jinja/: hashes.csv.j2
src/js/: basic-ng-template.js
src/scss/: _simple.scss  _variables.scss  basic-ng-template.scss
