[metadata]
name = basic_ng_template
version = attr:basic_ng_template.__version__

author = Chris Holdgraf
author_email = choldgraf@berkeley.edu

description = A template to show a minimal theme that uses the basic-ng base
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/choldgraf/sphinx-basic-ng-template
project_urls =
  Documentation = https://github.com/choldgraf/sphinx-basic-ng-template

classifiers =
  Framework :: Sphinx
  Framework :: Sphinx :: Theme
  License :: OSI Approved :: MIT License
  Environment :: Web Environment
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Operating System :: OS Independent
  Topic :: Documentation
  Topic :: Software Development :: Documentation

[options]
python_requires = >=3.6
install_requires =
  sphinx ~= 4.0
  web-compile
  sphinx-basic-ng @ https://github.com/pradyunsg/sphinx-basic-ng/archive/refs/heads/main.zip
include_package_data = True
packages=find:

[options.extras_require]
docs =
  myst-parser
  sphinx-autobuild
  sphinx-copybutton
  sphinx-inline-tabs
  ipython
dev =
  nox

[options.entry_points]
sphinx.html_themes =
  basic-ng-template = basic_ng_template
